namespace RollingBall.Game.Player
{
    public enum MoveDirection
    {
        Up,
        Down,
        Left,
        Right,
    }
}