using System.Collections.Generic;

namespace RollingBall.Game.StageData
{
    public sealed class StageEntity
    {
        public int targetMoveCount;
        public List<StageObject> stageObjects;
    }
}