using UnityEngine;

public interface IStageObject
{
    void SetPosition(Vector2 initializePosition);
}