@startuml

interface IMoveCountModel
class MoveCountModel
class MoveCountView<<MonoBehaviour>>
class MoveCountPresenter
enum MoveCountType

IMoveCountModel <|.. MoveCountModel
IMoveCountModel <-up- MoveCountPresenter
MoveCountView <-- MoveCountPresenter


class PlayerController<<MonoBehaviour>>
class PlayerMover
class MoveUseCase
class MoveButton<<MonoBehaviour>>
enum MoveDirection

MoveButton o-up- MoveDirection
Caretaker <-- MoveUseCase
MoveCountModel <-- MoveUseCase
IMoveObject <|.. PlayerController
PlayerMover <-- PlayerController
MoveUseCase <-- PlayerController
MoveButton <-- PlayerController
Goal <-- PlayerController


class Caretaker
class Memento
class MementoButton<<MonoBehaviour>>

MoveObjectEntity <-- Caretaker
Memento <-- Caretaker
IMoveObject <-- MoveObjectEntity
MementoButton o-up- MoveCountType
MementoButton <-- PlayerController

class StageDataTable<<ScriptableObject>>
class StageRepository
class StageEntity
class StageObject
class TargetMoveCountView<<MonoBehaviour>>
enum StageObjectType

MoveObjectEntity <-- StageRepository
PlayerController <-- StageRepository
Goal <- StageRepository
StageDataTable <-- StageRepository
StageObjectTable <-- StageRepository
StageEntity <-- StageRepository
TargetMoveCountView <-- StageRepository
StageObject <-- StageEntity
StageObject o-up- StageObjectType

interface IStageObject
interface IMoveObject
class MoveObjectEntity
class Goal<<MonoBehaviour>>

IStageObject <|.. IMoveObject
IStageObject <|.. Goal

interface IHittable
abstract class BaseBlock<<MonoBehaviour>>
class NormalBlock
class MoveBlock
class BallBlock

IHittable <|.. BaseBlock
BaseBlock <|-- NormalBlock
BaseBlock <|-- MoveBlock
BaseBlock <|-- BallBlock
IStageObject <|.. NormalBlock
IMoveObject <|.. MoveBlock
IMoveObject <|.. BallBlock

class StageObjectData<<ScriptableObject>>
class StageObjectTable<<ScriptableObject>>

StageObjectData <-- StageObjectTable
StageObjectData o-up- BaseBlock
StageObjectData o-up- StageObjectType

class ClearView<<MonoBehaviour>>
class RankView<<MonoBehaviour>>

RankView <-- ClearView
ClearView <-- Goal

@enduml